--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.0.0",
     "next": "^14.0.0",
     "postcss": "8.4.31",
+    "postgres": "^3.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
