--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.6",
     "@types/node": "20.5.7",
-    "@vercel/postgres": "^0.5.0",
+    "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.15",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.0.0",
-    "next": "^14.0.0",
+    "next": "^14.2.32",
     "postcss": "8.4.31",
     "postgres": "^3.4.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "zod": "^3.22.2"
